force-app/main/default/objects/Loss_Year__c/fields/Claim_Count__c.field-meta.xml
<CustomField>
    <fullName>Claim_Count__c</fullName>
    <label>Claim Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>