force-app/main/default/objects/Loss_Year__c/fields/Injury_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Injury_Type_Notes__c</fullName>
    <label>Injury Type Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>