force-app/main/default/objects/Loss_Year__c/fields/Open_Claims__c.field-meta.xml
<CustomField>
    <fullName>Open_Claims__c</fullName>
    <label>Open Claims</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>