force-app/main/default/objects/Loss_Year__c/fields/Policy_Year__c.field-meta.xml
<CustomField>
    <fullName>Policy_Year__c</fullName>
    <label>Policy Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>