force-app/main/default/objects/Loss_Year__c/fields/Total_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Total_Incurred__c</fullName>
    <label>Total Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>